# mmoaig-old

./: .dockerignore  .gitignore  docker-compose.yml  download-cert.sh  mmoaig.json
mmoaig-api/: Dockerfile  README.md  ghcid.sh  mmoaig-api.cabal  stack.yaml
mmoaig-api/src/: Lib.hs
mmoaig-api/src/MmoaigAPI/: Authorization.hs  Bots.hs  Configuration.hs  Environment.hs  GithubAPI.hs  GithubRepositories.hs  GithubUsers.hs  MatchInstances.hs  MatchParticipation.hs  Matches.hs  RockPaperScissorsRounds.hs  Schema.hs  Users.hs
mmoaig-api/src/MmoaigAPI/Games/: RockPaperScissors.hs
mmoaig-api/src/MmoaigAPIWeb/: AuthorizationEndpoint.hs  BotListEndpoint.hs  BotSourceEndpoint.hs  GithubRepositoryListEndpoint.hs  GithubUserListEndpoint.hs  JSONApi.hs  MatchDetailsEndpoint.hs  MatchInstanceListEndpoint.hs  MatchListEndpoint.hs  MatchParticipationListEndpoint.hs  MostRecentMatchInstanceEndpoint.hs  NextMatchEndpoint.hs  RockPaperScissorsRoundListEndpoint.hs  UpdateMatchEndpoint.hs  UserListEndpoint.hs
mmoaig-api/src/MmoaigAPIWeb/Games/: CreateRockPaperScissorsRoundEndpoint.hs
mmoaig-api/src/MmoaigAPIWeb/Representers/: APIResponse.hs  BotRepresenter.hs  GithubRepositoryRepresenter.hs  GithubUserRepresenter.hs  JSONApi.hs  MatchInstanceRepresenter.hs  MatchParticipationRepresenter.hs  MatchRepresenter.hs  RockPaperScissorsRoundRepresenter.hs  UserRepresenter.hs
mmoaig-api/test/: Factory.hs  TestUtilities.hs
mmoaig-api/test/MmoaigAPISpecs/: .ConfigurationSpec.hs.swp  BotsSpec.hs  ConfigurationSpec.hs  EnvironmentSpec.hs  GithubRepositoriesSpec.hs  GithubUsersSpec.hs  MatchInstancesSpec.hs  MatchParticipationSpec.hs  MatchesSpec.hs  RockPaperScissorsRoundsSpec.hs  UsersSpec.hs
mmoaig-api/test/MmoaigAPISpecs/GameSpecs/: RockPaperScissorsSpec.hs
mmoaig-api/test/MmoaigAPIWebSpecs/: BotListEndpointSpec.hs  BotSourceEndpointSpec.hs  GithubRepositoryListEndpointSpec.hs  GithubUserListEndpointSpec.hs  JSONApiSpec.hs  MatchDetailsEndpointSpec.hs  MatchInstanceListEndpointSpec.hs  MatchListEndpointSpec.hs  MatchParticipationListEndpointSpec.hs  NextMatchEndpointSpec.hs  RockPaperScissorsRoundListEndpointSpec.hs  UpdateMatchEndpointSpec.hs  UserListEndpointSpec.hs
mmoaig-api/test/MmoaigAPIWebSpecs/RepresentersSpecs/: BotRepresenterSpec.hs  GithubRepositoryRepresenterSpec.hs  GithubUserRepresenterSpec.hs  JSONApiSpec.hs  MatchInstanceRepresenterSpec.hs  MatchParticipationRepresenterSpec.hs  RockPaperScissorsRoundRepresenterSpec.hs  UserRepresenterSpec.hs
mmoaig-arena/: Dockerfile  README.md  angular.json  package-lock.json  package.json  server.ts  webpack.server.config.js
mmoaig-arena/e2e/src/: app.e2e-spec.ts  app.po.ts
mmoaig-arena/src/: index.html  tslint.json
mmoaig-arena/src/app/: app-routing.module.ts  app.component.spec.ts  app.component.ts  app.module.ts  model.ts
mmoaig-arena/src/environments/: environment.ts
mmoaig-db-migrations/: Dockerfile  Gemfile  update-db.sh
mmoaig-db-migrations/db/: config.yml  schema.rb  seeds.rb
mmoaig-db-migrations/db/migrate/: 20180902002714_create_users.rb  20180908015914_create_github_repositories.rb  20180908152520_create_github_users.rb  20180910163059_create_bots.rb  20180919234955_create_matches.rb  20180920185926_create_match_participation.rb  20181020181625_create_match_instances.rb  (+2 more)
mmoaig-db-migrations/scripts/: reset-test-db.sh  update-db.sh
mmoaig-gateway/: Dockerfile  nginx.conf
mmoaig-match-runner/: Dockerfile  package-lock.json  package.json  run-match.js
mmoaig-web-client/: Dockerfile  README.md  angular.json  package-lock.json  package.json  proxy.conf.json  server.ts  tsconfig.json  webpack.server.config.js
mmoaig-web-client/src/: index.html  manifest.json  tslint.json
mmoaig-web-client/src/app/: app.component.html  (+10 more)
(+104 files in other folders)
