name:                mmoaig-api
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/mmoaig-api#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , MmoaigAPI.Configuration
                     , MmoaigAPI.Environment
                     , MmoaigAPI.Games.RockPaperScissors
                     , MmoaigAPI.Schema
                     , MmoaigAPI.Bots
                     , MmoaigAPI.Matches
                     , MmoaigAPI.Users
                     , MmoaigAPI.GithubUsers
                     , MmoaigAPI.GithubRepositories
                     , MmoaigAPI.MatchInstances
                     , MmoaigAPIWeb.UserListEndpoint
                     , MmoaigAPIWeb.BotListEndpoint
                     , MmoaigAPIWeb.MatchInstanceListEndpoint
                     , MmoaigAPIWeb.RockPaperScissorsRoundListEndpoint
                     , MmoaigAPIWeb.AuthorizationEndpoint
                     , MmoaigAPIWeb.GithubUserListEndpoint
                     , MmoaigAPIWeb.GithubRepositoryListEndpoint
                     , MmoaigAPIWeb.MatchListEndpoint
                     , MmoaigAPIWeb.MatchDetailsEndpoint
                     , MmoaigAPIWeb.NextMatchEndpoint
                     , MmoaigAPIWeb.UpdateMatchEndpoint
                     , MmoaigAPIWeb.BotSourceEndpoint 
                     , MmoaigAPIWeb.Representers.GithubRepositoryRepresenter
                     , MmoaigAPIWeb.Representers.GithubUserRepresenter
                     , MmoaigAPIWeb.Representers.JSONApi
                     , MmoaigAPIWeb.Representers.UserRepresenter
                     , MmoaigAPIWeb.Representers.BotRepresenter 
                     , MmoaigAPIWeb.Representers.MatchRepresenter 
                     , MmoaigAPIWeb.Games.CreateRockPaperScissorsRoundEndpoint
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , beam-core
                     , beam-postgres
                     , bytestring
                     , containers
                     , http-client
                     , http-client-tls
                     , http-media
                     , jose-jwt
                     , postgresql-simple
                     , resource-pool
                     , servant-server
                     , servant-client
                     , wai
                     , text
                     , warp
  default-language:    Haskell2010

executable mmoaig-api-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mmoaig-api
  default-language:    Haskell2010

test-suite mmoaig-api-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , mmoaig-api
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , http-types
                     , wai-extra
                     , aeson
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/mmoaig-api
